--- a/css/style.css
+++ b/css/style.css
@@ -3,20 +3,11 @@
 	color: #aaaaaa;
 }
 body {
+	background: #fdfdfd;
 	margin: 0;
-	font-family: Georgia, Times, "Times New Roman", serif;
-	font-size: 14px;
-	line-height: 20px;
+	font-family: 'Raleway', sans-serif;
+	font-weight: 200;
 	color: #333333;
-	text-shadow: 0 1px #ffffff;
-	background: url('../img/handmadepaper.png');
-}
-
-@media all and (-webkit-min-device-pixel-ratio: 1.5) {
-  body {
-    background: url('../img/handmadepaper@2x.png');
-    background-size: 25%;
-  }
 }
 
 .container {
@@ -34,32 +25,35 @@ body {
 
 .head {
 	display: block;
-
 }
 
-h1 {
-	font-size: 60px;
-	font-weight: bold;
-	line-height: 80%;
+img {
+	margin: /*-1px*/ 0;
+	padding: 0;
+	display: block;
 }
 
-h2 {
-	font-size: 40px;
-	font-weight: bold;
-
-}
-
+h1,
+h2,
 h3 {
-	font-size: 30px;
-	font-weight: bold;
+	font-weight: 900;
+	text-align: center;
+	font-size: 4em;
 }
 
-a {
+h2,
+h3 {
+	font-weight: 900;
+	font-size: 2em;
+}
+
+
+a, a:visited {
 	color: #333333;
 	text-decoration: none;
-	transition:color 200ms;
-	-webkit-transition:color 200ms;
-	-moz-transition:color 200ms;
+	transition:all 400ms ease;
+	-webkit-transition:all 400ms ease;
+	-moz-transition:all 400ms ease;
 }
 
 a:hover {
@@ -67,15 +61,13 @@ a:hover {
 	text-decoration: none;
 }
 
-a:visited {
-	color: #333333;
-	text-decoration: none;
+p {
+	line-height: 1.5em;  
 }
 
 p.theme {
 	margin: 0;
 	font-style: italic;
-	font-weight: bold;
 	color: #aaa;
 }
 
@@ -94,48 +86,43 @@ li {
 
 hr {
 	height: 1px;
-  	margin: 20px 0 0 0;
-  	padding: 0;
-  	background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
-  	background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
-  	background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
-  	background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
-  	border: 0;
-    clear: both;
+	margin: 20px 0 0 0;
+	padding: 0;
+	background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
+	background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
+	background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
+	background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
+	border: 0;
+  clear: both;
 }
 hr.bottom {
-	margin-top: -5px;
-}
-
-p {
-    font-size: 16px;
-    line-height: 150%;
+	margin: 0;
+	padding: 0;
 }
 
 a.circle {
 	margin: 40px 0;
-	width: 20px;
-	height: 20px;
+	padding: .5em 1em;
 	background: #333333;
-	border-radius: 10px;
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
+	border-radius: 8px;
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
 	float: right;
-	vertical-align: middle;
 	text-align: center;
-	color: #aaaaaa;
-	line-height: 20px;
-	text-shadow: 0 0 0 #333333;
-	box-shadow: 0 1px 1px #ffffff;
-	transition:background 200ms;
-	-webkit-transition:background 200ms;
-	-moz-transition:background 200ms;
+	color: #ffffff;
+	box-shadow: 0 3px 0px #000000;
+	transition:all 400ms ease;
+	-webkit-transition:all 400ms ease;
+	-moz-transition:all 400ms ease;
 }
 
 a.circle:hover {
-	background: #aaaaaa;
-	color: #333333;
-	text-shadow: 0 1px #ffffff;
-	box-shadow: inset 0 1px 1px rgba(0,0,0,.5);
+	background: #222222;
+	;
 }
 
+@media only screen and (max-width: 640px) {
+	.container {
+		width: 94%;
+	}
+}
