fixed status bar for mobile safari

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="As a community we long to be shaped and formed in the same direction. One of the ways we pursue this is through praying together. Morning, midday &amp; evening.">
   <meta name="apple-mobile-web-app-capable" content="yes" />
-
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  
   <link href="/assets/css/app.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Raleway:900,200' rel='stylesheet' type='text/css'>
 
