added advent prayers

--- a/views/index.erb
+++ b/views/index.erb
@@ -50,11 +50,13 @@
         	<% if row[:date] == today.strftime("%Y-%m-%d") %>
         	
 
-        <p>O Lord, let my soul rise up to meet you as the day rises to meet the sun.<br />
-        Glory to the Father, and to the Son, and to the Holy Spirit,<br />
-        as it was in the beginning, is now, and will be forever. Amen.<br /></p>
+        <p>In the wilderness prepare the way of the Lord, make straight<br>
+        in the desert a highway for our God. <em>Isaiah 40:3</em></p>
 
-        <p>Come, let us bow down and bend the knee, let us kneel before the Lord our Maker</p>
+        <p>Glory to the Father, and to the Son, and to the Holy Spirit,<br>
+        as it was in the beginning, is now, and will be forever. Amen.</p>
+
+        <p>Our King and Savior now draws near: Come, let us adore him.</p>
 
         <p>Daily Psalm<br><%= row[:psalm]%></p>
 
@@ -69,7 +71,16 @@
         	<%= row[:gospel]%>
         </p>
 
+        <p><strong>The Song of Simeon</strong> <em>Luke 2:29-32</em><br>
+        Lord, you now have set your servant free<br>
+        &nbsp;&nbsp;to go in peace as you have promised;<br>
+        For these eyes of mine have seen the Savior,<br>
+        &nbsp;&nbsp;whom you have prepared for all the world to see:<br>
+        A Light to enlighten the nations,<br>
+        &nbsp;&nbsp;and the glory of your people Israel.</p>
 
+        <p>Glory to the Father, and to the Son, and to the Holy Spirit:<br>
+        &nbsp;&nbsp;as it was in the beginning, is now, and will be for ever. Amen.</p>
 
         <p><em>Prayers for Others & Our Father</em></p>
 
@@ -86,24 +97,18 @@
       <hr>
       <div class="content" id="midday">
         <img src="/assets/img/divider-shadow.png" width="100%">
-        <p>Lord, make me an instrument of your peace.<br />
-        Where there is hatred, let me sow love;<br />
-        where there is injury, pardon;<br />
-        where there is doubt, faith;<br />
-        where there is despair, hope;<br />
-        where there is darkness, light;<br />
-        where there is sadness, joy.<br />
-        O Divine Master, grant that I may not<br />
-        so much seek to be consoled as to console,<br />
-        to be understood as to understand,<br />
-        to be loved as to love.<br />
-        For it is in giving that we receive,<br />
-        it is in pardoning that we are pardoned,<br />
-        and it is in dying that we are born to eternal life.<br />
-        Glory to the Father, and to the Son, and to the Holy Spirit,<br />
-        as it was in the beginning, is now, and will be forever. Amen.<br /></p>
+        
+        <p>Blessed are the poor in spirit, for theirs is the kingdom of heaven.<br>
+        Blessed are those who mourn, for they shall be comforted.<br>
+        Blessed are the meek, for they shall inherit the earth.<br>
+        Blessed are those who hunger and thirst for righteousness, for they shall be satisfied.<br>
+        Blessed are the merciful, for they shall receive mercy.<br>
+        Blessed are the pure in heart, for they shall see God.<br>
+        Blessed are the peacemakers, for they shall be called sons of God.<br>Blessed are those who are persecuted for righteousness' sake, for theirs is the kingdom of heaven.<br>
+        Blessed are you when others revile you and persecute you and utter all kinds of evil against you falsely on my account. Rejoice and be glad, for your reward is great in heaven, for so they persecuted the prophets who were before you.</p>
 
         <p><em>Prayers for Others &  Great Commandment</em></p>
+
         <img src="/assets/img/divider-shadow-bottom.png" width="100%">
       <hr class="bottom">
       </div>
@@ -114,13 +119,32 @@
       <hr>
       <div class="content" id="evening">
         <img src="/assets/img/divider-shadow.png" width="100%">
-        <p>Lord Jesus, stay with us, for the evening is at hand and the day is past.</p> 
+        
+        <p><strong>The Song of Mary</strong> <em>Luke 1:46-55</em></p>
 
-        <p>Be our constant companion on the way, kindle our hearts, and awaken hope among us, that we may recognize You as You are revealed in the scriptures and in the breaking of bread.</p>
+        <p>My soul proclaims the greatness of the Lord,<br>
+        my spirit rejoices in God my Savior;<br>
+        &nbsp;&nbsp;for he has looked with favor on his lowly servant.</p>
 
-        <p>I thank You, Heavenly Father, that you have graciously kept me this day; and I pray that You would forgive me all my sins where I have done wrong, and graciously keep me this night.</p>
+        <p>From this day all generations will call me blessed:<br>
+        &nbsp;&nbsp;the Almighty has done great things for me,<br>
+        &nbsp;&nbsp;and holy is his Name.<br>
+        He has mercy on those who fear him<br>
+        &nbsp;&nbsp;in every generation.<br>
+        He has shown the strength of his arm,<br>
+        &nbsp;&nbsp;he has scattered the proud in their conceit.<br>
+        He has cast down the mighty from their thrones,<br>
+        &nbsp;&nbsp;and has lifted up the lowly.<br>
+        He has filled the hungry with good things,<br>
+        &nbsp;&nbsp;and the rich he has sent away empty.<br>
+        He has come to the help of his servant Israel,<br>
+        &nbsp;&nbsp;for he has remembered his promise of mercy,<br>
+        The promise he made to our fathers,<br>
+        &nbsp;&nbsp;to Abraham and his children for ever.</p>
 
-        <p>For into Your hands I commend myself, my body and soul, and all things. Let Your Holy Spirit be with me, that the evil foe may have no power over me. Amen. </p>
+        <p>Glory to the Father, and to the Son, and to the Holy Spirit:<br>
+        &nbsp;&nbsp;as it was in the beginning, is now, and will be for ever. Amen.</p>
+
         <img src="/assets/img/divider-shadow-bottom.png" width="100%">
       <hr class="bottom">
       </div>
